added workshops section

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <li><a href="#projects">Projects</a></li>
         <li><a href="#experience">Experience</a></li>
         <li><a href="#publications">Publications</a></li>
+        <li><a href="#workshops">Workshops</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </div>
@@ -580,7 +581,86 @@
     </div>
   </section>
   
-  
+  <!-- Workshops & Mentorships Slideshow Section -->
+<section id="workshops" class="workshops-section">
+  <div class="container">
+    <h2>Workshops & Mentorships</h2>
+    <div class="slider">
+      <div class="slide active">
+         <img src="assets/images/teaching/3.jpg" alt="Robotics Automation Workshop" style="width: 100; height: auto;">
+         <p>ROS Workshop</p>
+      </div>
+      <div class="slide">
+         <img src="assets/images/teaching/4.jpg" alt="AI &amp; ML Mentorship Program" style="width: 100%; height: auto;">
+         <p>ROS Workshop</p>
+      </div>
+      <div class="slide">
+         <img src="assets/images/teaching/5.jpg" alt="Advanced ROS Workshop" style="width: 100%; height: auto;">
+         <p>RSET | Introduction to Embedded Systems</p>
+      </div>
+      <div class="slide">
+        <img src="assets/images/teaching/6.jpg" alt="Advanced ROS Workshop" style="width: 100%; height: auto;">
+        <p>MITS | Implementation of Autonomous Navigation using ROS</p>
+     </div>
+     <div class="slide">
+      <img src="assets/images/teaching/7.jpg" alt="Advanced ROS Workshop" style="width: 100%; height: auto;">
+      <p>CRS | Programming Robots using Arduinp</p>
+   </div>
+   <div class="slide">
+    <img src="assets/images/teaching/8.jpg" alt="Advanced ROS Workshop" style="width: 100%; height: auto;">
+    <p> RSET | Tekshetra | Techfest | Intro to ROS</p>
+ </div>
+ <div class="slide">
+  <img src="assets/images/teaching/9.jpg" alt="Advanced ROS Workshop" style="width: 100%; height: auto;">
+  <p> IIT Ropar | Paper Presentaion | AIR 2024 </p>
+</div>
+<div class="slide">
+  <img src="assets/images/teaching/10.jpg" alt="Advanced ROS Workshop" style="width: 100%; height: auto;">
+  <p>Providence College | Building ROS based hardware projects</p>
+</div>
+<div class="slide">
+  <img src="assets/images/teaching/11.jpg" alt="Advanced ROS Workshop" style="width: 100%; height: auto;">
+  <p>CUSAT | Introduction to Mobile Robotics </p>
+</div>
+<div class="slide">
+  <img src="assets/images/teaching/12.jpg" alt="Advanced ROS Workshop" style="width: 100%; height: auto;">
+  <p>MITS | Faculty Development Program | Introduction to ROS</p>
+</div>
+<div class="slide">
+  <img src="assets/images/teaching/13.jpg" alt="Advanced ROS Workshop" style="width: 100%; height: auto;">
+  <p>MITS | Faculty Development Program | Introduction to ROS</p>
+</div>
+<div class="slide">
+  <img src="assets/images/teaching/14.jpeg" alt="Advanced ROS Workshop" style="width: 70%; height: auto;">
+  <p>RSET | ROS Based Modelling</p>
+</div>
+<div class="slide">
+  <img src="assets/images/teaching/15.jpeg" alt="Advanced ROS Workshop" style="width: 70%; height: auto;">
+  <p>MITS | Unlocking ROS2 </p>
+</div>
+<div class="slide">
+  <img src="assets/images/teaching/16.jpeg" alt="Advanced ROS Workshop" style="width: 70%; height: auto;">
+  <p>MACE | Introduction to Mobile Robotics</p>
+</div>
+<div class="slide">
+  <img src="assets/images/teaching/17.jpeg" alt="Advanced ROS Workshop" style="width: 100%; height: auto;">
+  <p>FISAT | Building hardware robots </p>
+</div>
+<div class="slide">
+  <img src="assets/images/teaching/18.jpeg" alt="Advanced ROS Workshop" style="width: 70%; height: auto;">
+  <p>IEEE SCT SB | Building Line Follower Robots</p>
+</div>
+<div class="slide">
+  <img src="assets/images/teaching/1.jpg" alt="Advanced ROS Workshop" style="width: 100%; height: auto;">
+  <p>UCR | BCOE Robotics Summer Camp</p>
+</div>
+      <!-- Add more slides as needed -->
+      <div class="prev">&#10094;</div>
+      <div class="next">&#10095;</div>
+    </div>
+  </div>
+</section>
+
 
   <!-- Contact Section -->
   <section id="contact" class="contact-section">
