--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>Jerin Peter - Robotics Portfolio</title>
+  <meta property="og:image" content="assets/images/previews/image.jpg">
+  <meta property="og:url" content="https://jerinpeter.github.io/">
+  <meta property="og:type" content="website">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
@@ -604,7 +607,7 @@
      </div>
      <div class="slide">
       <img src="assets/images/teaching/7.jpg" alt="Advanced ROS Workshop" style="width: 100%; height: auto;">
-      <p>CRS | Programming Robots using Arduinp</p>
+      <p>CRS | Programming Robots using Arduino</p>
    </div>
    <div class="slide">
     <img src="assets/images/teaching/8.jpg" alt="Advanced ROS Workshop" style="width: 100%; height: auto;">
