--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>Jerin Peter - Robotics Portfolio</title>
-  <meta property="og:image" content="assets/images/previews/image.jpg">
-  <meta property="og:url" content="https://jerinpeter.github.io/">
+  <meta property="og:image" content="assets/images/preview/image.jpg">
+  <meta property="og:url" content="https://yourwebsite.github.io/">
   <meta property="og:type" content="website">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
