--- a/index.html
+++ b/index.html
@@ -5,8 +5,19 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>Jerin Peter - Robotics Portfolio</title>
   <meta property="og:image" content="assets/images/preview/image.jpeg">
-  <!-- <meta property="og:url" content="https://jerinpeter.github.io/"> -->
-  <!-- <meta property="og:type" content="website"> -->
+  <meta name="description" content="Jerin Peter - Robotics Engineer specializing in Control, Navigation, and ROS Development. Explore my portfolio, projects, publications, and more.">
+  <meta name="keywords" content="Jerin Peter, Robotics Engineer, ROS Developer, Control Systems, Navigation, Robotics Portfolio, Robotics Projects">
+  <meta name="author" content="Jerin Peter">
+  <meta name="robots" content="index, follow">
+  <meta property="og:title" content="Jerin Peter - Robotics Portfolio">
+  <meta property="og:description" content="Explore the portfolio of Jerin Peter, a Robotics Engineer with expertise in Control, Navigation, and ROS Development.">
+  <meta property="og:image" content="assets/images/preview/image.jpeg">
+  <meta property="og:url" content="https://jerinpeter.github.io/">
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Jerin Peter - Robotics Portfolio">
+  <meta name="twitter:description" content="Explore the portfolio of Jerin Peter, a Robotics Engineer with expertise in Control, Navigation, and ROS Development.">
+  <meta name="twitter:image" content="assets/images/preview/image.jpeg">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
