--- a/index.html
+++ b/index.html
@@ -553,8 +553,16 @@
             <h3>Development of a Low-Cost Multipurpose Autonomous Navigation Robot</h3>
             <p class="publication-authors">J. Peter and M. J. Thomas</p>
             <p>
-              2022 IEEE World Conference on Applied Intelligence and Computing (AIC), Sonbhadra, India, 2022, pp. 451-454, doi: 10.1109/AIC55036.2022.9848857
+              2022 IEEE World Conference on Applied Intelligence and Computing (AIC), Sonbhadra, India, 2022 - IEEE Xplore
             </p>
+            <!-- Embedded YouTube Video -->
+            <div class="publication-video">
+              <iframe width="100%" height="200" src="https://www.youtube.com/embed/sJpIB1qDBU4" 
+                title="Development of a Low-Cost Multipurpose Autonomous Navigation Robot" 
+                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                allowfullscreen>
+              </iframe>
+            </div>
             <a href="https://ieeexplore.ieee.org/abstract/document/9848857" target="_blank" class="publication-link">
               View Paper
             </a>
@@ -567,9 +575,17 @@
             <h3>Development of an Autonomous Ground Robot Using a Real-Time Appearance Based (RTAB) Algorithm</h3>
             <p class="publication-authors">J. Peter, M. J. Thomas, Mohan S. </p>
             <p>
-              In Proceedings of the 2023 6th International Conference on Advances in Robotics (AIR '23). <br/>
-              <em>https://doi.org/10.1145/3610419.3610472</em>
+              In Proceedings of the 2023 6th International Conference on Advances in Robotics - ACM <br/>
+              <!-- <em>https://doi.org/10.1145/3610419.3610472</em> -->
             </p>
+            <!-- Embedded YouTube Video -->
+            <div class="publication-video">
+              <iframe width="100%" height="200" src="https://www.youtube.com/embed/oyijr-v_Ncw" 
+                title="Development of an Autonomous Ground Robot Using a Real-Time Appearance Based (RTAB) Algorithm" 
+                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                allowfullscreen>
+              </iframe>
+            </div>
             <a href="https://dl.acm.org/doi/abs/10.1145/3610419.3610472" target="_blank" class="publication-link">
               View Paper
             </a>
@@ -582,9 +598,17 @@
             <h3>Development of an Intuitive Autonomous Ground Robot for Indoor Delivery Applications</h3>
             <p class="publication-authors">Peter J., Thomas M.J., Gokulkrishna S., Cholappally K., Mohan S.</p>
             <p>
-              Recent Advancements in Product Design and Manufacturing Systems. IPDIMS 2023. <br/>
-              <em>https://doi.org/10.1007/978-981-97-6732-8_3</em>
+              Recent Advancements in Product Design and Manufacturing Systems. IPDIMS 2023 - Springer Nature <br/>
+              <!-- <em>https://doi.org/10.1007/978-981-97-6732-8_3</em> -->
             </p>
+            <!-- Embedded YouTube Video -->
+            <div class="publication-video">
+              <iframe width="100%" height="200" src="https://www.youtube.com/embed/UdTig0XozBs" 
+                title="Development of an Intuitive Autonomous Ground Robot for Indoor Delivery Applications" 
+                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                allowfullscreen>
+              </iframe>
+            </div>
             <a href="https://link.springer.com/chapter/10.1007/978-981-97-6732-8_3" target="_blank" class="publication-link">
               View Paper
             </a>
