--- a/index.html
+++ b/index.html
@@ -56,16 +56,17 @@
 
 
       </div>
+      <div class="resume-container">
+        <a href="https://drive.google.com/file/d/1uh0uZJYCMabrNe1ZgiYcL_7Oc0FJtWtU/view?usp=sharing" 
+           target="_blank" class="resume-button">
+          <i class="fas fa-download"></i> Resume
+        </a>
+      </div>
     </div>
   </section>
 
   <!-- Resume Button -->
-  <div class="resume-container">
-    <a href="https://drive.google.com/file/d/1uh0uZJYCMabrNe1ZgiYcL_7Oc0FJtWtU/view?usp=sharing" 
-       target="_blank" class="resume-button">
-      Resume
-    </a>
-  </div>
+
 
   <!-- About Section -->
   <section id="about" class="about-section">
@@ -127,7 +128,7 @@
       <div class="skill-card">
         <i class="fas fa-code"></i>
         <h3>Programming</h3>
-        <p>C++, Python, C, Embedded C, MATLAB</p>
+        <p>C/C++, Python, Embedded C, MATLAB</p>
       </div>
       <div class="skill-card">
         <i class="fas fa-brain"></i>
@@ -555,6 +556,9 @@
             <p>
               2022 IEEE World Conference on Applied Intelligence and Computing (AIC), Sonbhadra, India, 2022 - IEEE Xplore
             </p>
+            <a href="https://ieeexplore.ieee.org/abstract/document/9848857" target="_blank" class="publication-link">
+              View Paper
+            </a>
             <!-- Embedded YouTube Video -->
             <div class="publication-video">
               <iframe width="100%" height="200" src="https://www.youtube.com/embed/sJpIB1qDBU4" 
@@ -563,9 +567,6 @@
                 allowfullscreen>
               </iframe>
             </div>
-            <a href="https://ieeexplore.ieee.org/abstract/document/9848857" target="_blank" class="publication-link">
-              View Paper
-            </a>
           </div>
         </div>
   
@@ -578,6 +579,9 @@
               In Proceedings of the 2023 6th International Conference on Advances in Robotics - ACM <br/>
               <!-- <em>https://doi.org/10.1145/3610419.3610472</em> -->
             </p>
+            <a href="https://dl.acm.org/doi/abs/10.1145/3610419.3610472" target="_blank" class="publication-link">
+              View Paper
+            </a>
             <!-- Embedded YouTube Video -->
             <div class="publication-video">
               <iframe width="100%" height="200" src="https://www.youtube.com/embed/oyijr-v_Ncw" 
@@ -586,9 +590,6 @@
                 allowfullscreen>
               </iframe>
             </div>
-            <a href="https://dl.acm.org/doi/abs/10.1145/3610419.3610472" target="_blank" class="publication-link">
-              View Paper
-            </a>
           </div>
         </div>
   
@@ -601,6 +602,9 @@
               Recent Advancements in Product Design and Manufacturing Systems. IPDIMS 2023 - Springer Nature <br/>
               <!-- <em>https://doi.org/10.1007/978-981-97-6732-8_3</em> -->
             </p>
+            <a href="https://link.springer.com/chapter/10.1007/978-981-97-6732-8_3" target="_blank" class="publication-link">
+              View Paper
+            </a>
             <!-- Embedded YouTube Video -->
             <div class="publication-video">
               <iframe width="100%" height="200" src="https://www.youtube.com/embed/UdTig0XozBs" 
@@ -609,9 +613,6 @@
                 allowfullscreen>
               </iframe>
             </div>
-            <a href="https://link.springer.com/chapter/10.1007/978-981-97-6732-8_3" target="_blank" class="publication-link">
-              View Paper
-            </a>
           </div>
         </div>
   
@@ -692,6 +693,10 @@
   <img src="assets/images/teaching/1.jpg" alt="Advanced ROS Workshop" style="width: 100%; height: auto;">
   <p>UCR | BCOE Robotics Summer Camp</p>
 </div>
+<div class="slide">
+  <img src="assets/images/teaching/19.jpeg" alt="Advanced ROS Workshop" style="width: 70%; height: auto;">
+  <p>SCT College | IEEE</p>
+</div>
       <!-- Add more slides as needed -->
       <div class="prev">&#10094;</div>
       <div class="next">&#10095;</div>
@@ -715,11 +720,49 @@
         <span class="dot" onclick="currentSlide(16)"></span>
         <span class="dot" onclick="currentSlide(17)"></span>
         <span class="dot" onclick="currentSlide(18)"></span>
+        <span class="dot" onclick="currentSlide(19)"></span>
       </div>
     </div>
   </div>
 </section>
 
+<!-- Achievements Section -->
+<section id="achievements" class="achievements-section">
+  <div class="container">
+    <h2>Achievements</h2>
+    <div class="slider achievements-slider">
+      <div class="slide active">
+        <img src="assets/images/achievements/1.jpg" alt="Achievement 1" style="width: 100%; height: auto;">
+        <p>European Rover Challenge | Best Team - Maintenance Task</p>
+      </div>
+      <div class="slide">
+        <img src="assets/images/achievements/2.jpg" alt="Achievement 2" style="width: 100%; height: auto;">
+        <p>Swadarsh | Autonomous Robot Challenge | 1st Prize</p>
+      </div>
+      <div class="slide">
+        <img src="assets/images/achievements/3.jpg" alt="Achievement 3" style="width: 100%; height: auto;">
+        <p>Artpark Robotics Challenge - Finalist | IISC Banglore</p>
+      </div>
+      <div class="slide">
+        <img src="assets/images/achievements/4.jpg" alt="Achievement 4" style="width: 100%; height: auto;">
+        <p>Nasa Space Apps Hackathon | 1st Prize</p>
+      </div>
+      <div class="slide">
+        <img src="assets/images/achievements/5.jpg" alt="Achievement 5" style="width: 100%; height: auto;">
+        <p>Achievement 5 Description</p>
+      </div>
+      <div class="prev">&#10094;</div>
+      <div class="next">&#10095;</div>
+      <div class="dots-container">
+        <span class="dot" onclick="currentAchievementSlide(1)"></span>
+        <span class="dot" onclick="currentAchievementSlide(2)"></span>
+        <span class="dot" onclick="currentAchievementSlide(3)"></span>
+        <span class="dot" onclick="currentAchievementSlide(4)"></span>
+        <span class="dot" onclick="currentAchievementSlide(5)"></span>
+      </div>
+    </div>
+  </div>
+</section>
 
   <!-- Contact Section -->
   <section id="contact" class="contact-section">
