--- a/index.html
+++ b/index.html
@@ -747,6 +747,10 @@
         <img src="assets/images/achievements/4.jpg" alt="Achievement 4" style="width: 100%; height: auto;">
         <p>Nasa Space Apps Hackathon | 1st Prize</p>
       </div>
+      <div class="slide">
+        <img src="assets/images/achievements/5.jpg" alt="Achievement 5" style="width: 100%; height: auto;">
+        <p>IEEE IAS CMD Student Robotics Demonstration Contest | 1st Prize</p>
+      </div>
       <div class="prev">&#10094;</div>
       <div class="next">&#10095;</div>
       <div class="dots-container">
@@ -754,6 +758,7 @@
         <span class="dot" onclick="currentAchievementSlide(2)"></span>
         <span class="dot" onclick="currentAchievementSlide(3)"></span>
         <span class="dot" onclick="currentAchievementSlide(4)"></span>
+        <span class="dot" onclick="currentAchievementSlide(5)"></span>
       </div>
     </div>
   </div>
