project card visibility -mobile

--- a/index.html
+++ b/index.html
@@ -54,10 +54,8 @@
         <a href="mailto:jerinpeter@gmail.com"><i class="fas fa-envelope" style="font-size: 1.5em;"></i></a>
         <a href="https://linkedin.com/in/jerinpeter" target="_blank"><i class="fab fa-linkedin" style="font-size: 1.5em;"></i></a>
         <a href="https://www.youtube.com/@Jp_Robotics/videos" target="_blank"><i class="fab fa-youtube" style="font-size: 1.5em;"></i></a>
-
-
       </div>
-      <div class="resume-container">
+      <div class="resume-container animated-text">
         <a href="https://drive.google.com/file/d/1uh0uZJYCMabrNe1ZgiYcL_7Oc0FJtWtU/view?usp=sharing" 
            target="_blank" class="resume-button">
           <i class="fas fa-download"></i> Resume
