added 2 more achievements

--- a/index.html
+++ b/index.html
@@ -750,6 +750,14 @@
         <img src="assets/images/achievements/5.jpg" alt="Achievement 5" style="width: 130%; height: auto;">
         <p>IEEE IAS CMD Student Robotics Demonstration Contest | 1st Prize</p>
       </div>
+      <div class="slide">
+        <img src="assets/images/achievements/6.jpeg" alt="Achievement 6" style="width: 130%; height: auto;">
+        <p>Best Paper Award</p>
+      </div>
+      <div class="slide">
+        <img src="assets/images/achievements/7.jpeg" alt="Achievement 7" style="width: 130%; height: auto;">
+        <p>Ottonomo | 1st Prize</p>
+      </div>
       <div class="prev">&#10094;</div>
       <div class="next">&#10095;</div>
       <div class="dots-container">
@@ -758,6 +766,8 @@
         <span class="dot" onclick="currentAchievementSlide(3)"></span>
         <span class="dot" onclick="currentAchievementSlide(4)"></span>
         <span class="dot" onclick="currentAchievementSlide(5)"></span>
+        <span class="dot" onclick="currentAchievementSlide(6)"></span>
+        <span class="dot" onclick="currentAchievementSlide(7)"></span>
       </div>
     </div>
   </div>
