--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <img src="assets/images/education/ucr.png" alt="University of California, Riverside Logo">
           </div>
           <p>MS in Robotics with focus on control & navigation</p>
-          <p>CGPA: 4.0</p>
+          <p>CGPA: 4.0 / 4.0</p>
           <p>Courses: Programming Practical Robots, Kinematics & Dynamics of Robots, Reinforcement Learning, Optimal
             Control & Estimation, Computational Methods for Robotics, Fundamentals of Machine Learning, Foundations of
             Robotics</p>
@@ -102,7 +102,7 @@
             <img src="assets/images/education/rset.jpeg" alt="Rajagiri School of Engineering & Technology Logo">
           </div>
           <p>Undergraduate in Electronics & Communication Engineering</p>
-          <p>CGPA: 3.26</p>
+          <p>CGPA: 3.26 / 4.0</p>
           <p>Courses: Robotics and Industrial Automation, Machine Learning, Real Time Operating Systems, Control
             Systems, Digital Signal Processing</p>
         </div>
@@ -113,7 +113,7 @@
             <img src="assets/images/education/crs.png" alt="Cochin Refineries School Logo">
           </div>
           <p>High School (12th Grade) with Major in Computer Science</p>
-          <p>CGPA: 3.5</p>
+          <p>CGPA: 3.5 / 4.0</p>
           <p>Courses: Computer Science (C++, SQL), Mathematics, Physics, Chemistry</p>
         </div>
       </div>
