--- a/index.html
+++ b/index.html
@@ -758,6 +758,14 @@
         <img src="assets/images/achievements/7.jpeg" alt="Achievement 7" style="width: 70%; height: auto;">
         <p>Ottonomo | 1st Prize</p>
       </div>
+      <div class="slide">
+        <img src="assets/images/achievements/8.jpg" alt="Achievement 7" style="width: 70%; height: auto;">
+        <p>Best Paper Award | AIC 2022</p>
+      </div>
+      <div class="slide">
+        <img src="assets/images/achievements/9.png" alt="Achievement 7" style="width: 70%; height: auto;">
+        <p>IEEE International Competition | 1st Prize - Asia Pacific</p>
+      </div>      
       <div class="prev">&#10094;</div>
       <div class="next">&#10095;</div>
       <div class="dots-container">
@@ -768,6 +776,9 @@
         <span class="dot" onclick="currentAchievementSlide(5)"></span>
         <span class="dot" onclick="currentAchievementSlide(6)"></span>
         <span class="dot" onclick="currentAchievementSlide(7)"></span>
+        <span class="dot" onclick="currentAchievementSlide(8)"></span>
+        <span class="dot" onclick="currentAchievementSlide(9)"></span>
+
       </div>
     </div>
   </div>
