Added rmf project

--- a/index.html
+++ b/index.html
@@ -158,24 +158,44 @@
     <div class="container">
       <h2>Projects</h2>
       <div class="project-grid">
+        <!-- Project 1: Multi-Robot Navigation using RMF and TurtleBot3 -->
+        <a href="tb3_rmf_multirobotnav.html" style="text-decoration: none; color: inherit;">
+          <div class="project-card">
+            <img src="assets/images/projects/tb3_rmf_multirobotnav/sim.png" alt="Multi-Robot Navigation using RMF and TurtleBot3" style="height:100%; width: 100%;; object-fit: cover;">
+            <h3>Multi-Robot Navigation using Open-RMF and TurtleBot3</h3>
+            <p>Coordinated fleet management and navigation in a simulated environment using RMF, ROS 2, and TurtleBot3 robots. Demonstrates task scheduling, traffic management, and collision-free delivery in complex indoor layouts.</p>
+            <ul class="project-skills">
+              <li>RMF</li>
+              <li>ROS 2</li>
+              <li>Multi-Robot Coordination</li>
+              <li>Gazebo Simulation</li>
+              <li>Fleet Management</li>
+              <li>Navigation</li>
+            </ul>
+          </div>
+        </a>
         
         <!-- Project 1 -->
-        <div class="project-card">
-          <img src="assets/images/projects/multimodal.png" alt="Multimodal Calibration Dataset">
-          <h3>Multimodal Calibration Dataset</h3>
-          <p>A versatile multimodal calibration platform that uses robotic arms and a high-precision MoCap system to
-            collect diverse extrinsic data between cameras and LiDAR sensors across both static and dynamic
-            configurations.</p>
-          <p>Submitted to RSS 2025 (pending approval)</p>
-          <ul class="project-skills">
-            <li>ROS</li>
-            <li>Camera-LiDAR Calibration</li>
-            <li>Manipulation</li>
-            <li>MoCap</li>
-            <li>Extrinsic Calibration</li>
-            <li>Data Collection</li>
-          </ul>
-        </div>
+
+        <a href="autonomous_indoor_delivery_robot.html" style="text-decoration: none; color: inherit;">
+          <div class="project-card">
+            <img src="assets/images/projects/nova.jpg" alt="Autonomous Indoor Delivery Robot">
+            <h3>Autonomous Indoor Delivery Robot</h3>
+            <p>Developed an autonomous indoor delivery robot using ROS for precise path planning. Integrated sensor
+              fusion (Lidar, Wheel odom, IMU) with EKF for high accuracy localization. Designed a PyQT-based GUI for
+              easy user interaction and voice control.</p>
+            <ul class="project-skills">
+              <li>ROS</li>
+              <li>Path Planning</li>
+              <li>Sensor Fusion</li>
+              <li>Extended Kalman Filter</li>
+              <li>PyQT GUI</li>
+              <li>Voice Control</li>
+              <li>Interactive</li>
+              <li>Solid Works</li>
+            </ul>
+          </div>
+        </a>
 
         <!-- Project 2 -->
         <a href="plate_cleaning_arm.html" style="text-decoration: none; color: inherit;">
@@ -197,26 +217,21 @@
         </a>
 
         <!-- Project 3 -->
-        <a href="autonomous_indoor_delivery_robot.html" style="text-decoration: none; color: inherit;">
-          <div class="project-card">
-            <img src="assets/images/projects/nova.jpg" alt="Autonomous Indoor Delivery Robot">
-            <h3>Autonomous Indoor Delivery Robot</h3>
-            <p>Developed an autonomous indoor delivery robot using ROS for precise path planning. Integrated sensor
-              fusion (Lidar, Wheel odom, IMU) with EKF for high accuracy localization. Designed a PyQT-based GUI for
-              easy user interaction and voice control.</p>
-            <ul class="project-skills">
-              <li>ROS</li>
-              <li>Path Planning</li>
-              <li>Sensor Fusion</li>
-              <li>Extended Kalman Filter</li>
-              <li>PyQT GUI</li>
-              <li>Voice Control</li>
-              <li>Interactive</li>
-              <li>Solid Works</li>
-            </ul>
-          </div>
-        </a>
-
+        <div class="project-card">
+          <img src="assets/images/projects/multimodal.png" alt="Multimodal Calibration Dataset">
+          <h3>Multimodal Calibration Dataset</h3>
+          <p>A versatile multimodal calibration platform that uses robotic arms and a high-precision MoCap system to
+            collect diverse extrinsic data between cameras and LiDAR sensors across both static and dynamic
+            configurations.</p>
+          <ul class="project-skills">
+            <li>ROS</li>
+            <li>Camera-LiDAR Calibration</li>
+            <li>Manipulation</li>
+            <li>MoCap</li>
+            <li>Extrinsic Calibration</li>
+            <li>Data Collection</li>
+          </ul>
+        </div>
         <!-- Project 4 -->
         <a href="4wd_outdoor_nav.html" style="text-decoration: none; color: inherit;">
           <div class="project-card">
