--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
             <img src="assets/images/education/ucr.png" alt="University of California, Riverside Logo">
           </div>
           <p>MS in Robotics with focus on control & navigation</p>
-          <p>CGPA: 4.0 / 4.0</p>
+          <p>CGPA: 3.88 / 4.0</p>
           <p>Courses: Programming Practical Robots, Kinematics & Dynamics of Robots, Reinforcement Learning, Optimal
             Control & Estimation, Computational Methods for Robotics, Fundamentals of Machine Learning, Foundations of
-            Robotics</p>
+            Robotics, Linear Control Systems</p>
         </div>
 
         <div class="education-item">
@@ -102,7 +102,7 @@
             <img src="assets/images/education/rset.jpeg" alt="Rajagiri School of Engineering & Technology Logo">
           </div>
           <p>Undergraduate in Electronics & Communication Engineering</p>
-          <p>CGPA: 3.26 / 4.0</p>
+          <p>CGPA: 8.14 / 10.0</p>
           <p>Courses: Robotics and Industrial Automation, Machine Learning, Real Time Operating Systems, Control
             Systems, Digital Signal Processing</p>
         </div>
@@ -113,7 +113,7 @@
             <img src="assets/images/education/crs.png" alt="Cochin Refineries School Logo">
           </div>
           <p>High School (12th Grade) with Major in Computer Science</p>
-          <p>CGPA: 3.5 / 4.0</p>
+          <p>CGPA: 8.60 / 10.0</p>
           <p>Courses: Computer Science (C++, SQL), Mathematics, Physics, Chemistry</p>
         </div>
       </div>
@@ -163,7 +163,7 @@
           <div class="project-card">
             <img src="assets/images/projects/tb3_rmf_multirobotnav/sim.png" alt="Multi-Robot Navigation using RMF and TurtleBot3" style="height:100%; width: 100%;; object-fit: cover;">
             <h3>Multi-Robot Navigation using Open-RMF and TurtleBot3</h3>
-            <p>Coordinated fleet management and navigation in a simulated environment using RMF, ROS 2, and TurtleBot3 robots. Demonstrates task scheduling, traffic management, and collision-free delivery in complex indoor layouts.</p>
+            <p>Coordinated fleet management and navigation in a using Open-RMF, ROS 2, and TurtleBot3 robots. Demonstrates task scheduling, traffic management, and collision-free delivery in complex indoor layouts.</p>
             <ul class="project-skills">
               <li>RMF</li>
               <li>ROS 2</li>
@@ -476,6 +476,8 @@
 
         <!-- Project 19 -->
         <div class="project-card">
+        <a href="https://www.youtube.com/watch?v=DF6BLnM9p1M" target="_blank" style="text-decoration: none; color: inherit;">
+
           <img src="assets/images/projects/iot.jpg" alt="Home Automation using IOT">
           <h3>Home Automation using IOT</h3>
           <p>NodeMCU-based control of sockets using IFTTT and Gassit.</p>
@@ -486,6 +488,7 @@
             <li>IFTTT</li>
             <li>Embedded Systems</li>
           </ul>
+          </a>
         </div>
 
         <!-- Project 20 -->
