--- a/tb3_rmf_multirobotnav.html
+++ b/tb3_rmf_multirobotnav.html
@@ -88,7 +88,7 @@
     </ul>
     <figure>
       <img src="assets/images/projects/tb3_rmf_multirobotnav/robots.jpg" alt="Fleet of TurtleBot3 robots in simulation" style="max-width: 700px; width: 100%;">
-      <figcaption>Fig. 1. Fleet of TurtleBot3 robots in the Gazebo simulation environment</figcaption>
+      <figcaption>Fig. 1 TB3 robots used for testing</figcaption>
     </figure>
     <h2>3. Methodology</h2>
     <h3>3.1 Environment and Robot Setup</h3>
