--- a/tb3_rmf_multirobotnav.html
+++ b/tb3_rmf_multirobotnav.html
@@ -115,7 +115,7 @@
     </ul>
     <figure>
       <img src="assets/images/projects/tb3_rmf_multirobotnav/task.png" alt="Task execution in simulation" style="max-width: 700px; width: 100%;">
-      <figcaption>Fig. 3. Task execution and robot coordination in simulation</figcaption>
+      <figcaption>Fig. 3. Task execution and robot coordination implementation in real-world setting</figcaption>
     </figure>
     <h3>3.4 Monitoring and Visualization</h3>
     <ul>
@@ -129,7 +129,7 @@
     </p>
         <div class="video-container" style="text-align: center; margin-top: 2rem;">
       <iframe width="640" height="360" src="https://www.youtube.com/embed/DyssXuOaH5k?si=H4bJVBvwwuscdOsh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-      <figcaption>Robot Simulation + Working (in progress)</figcaption>
+      <figcaption>Robot Navigation Working (in progress)</figcaption>
     </div>
     <h2>5. Conclusion</h2>
     <p>
