added portfolio name

--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Jerin Peter - Robotics Portfolio</title>
+  <title>Darshan K T - Robotics Portfolio</title>
   <meta property="og:image" content="assets/images/preview/image.jpeg">
-  <meta name="description" content="Jerin Peter - Robotics Engineer specializing in Control, Navigation, and ROS Development. Explore my portfolio, projects, publications, and more.">
-  <meta name="keywords" content="Jerin Peter, Robotics Engineer, ROS Developer, Control Systems, Navigation, Robotics Portfolio, Robotics Projects">
-  <meta name="author" content="Jerin Peter">
+  <meta name="description" content="Darshan K T Gowda - Robotics Engineer specializing in Control, Navigation, and ROS Development. Explore my portfolio, projects, publications, and more.">
+  <meta name="keywords" content="Darshan K T Gowda, Robotics Engineer, ROS Developer, Control Systems, Navigation, Robotics Portfolio, Robotics Projects">
+  <meta name="author" content="Darshan K T Gowda">
   <meta name="robots" content="index, follow">
-  <meta property="og:title" content="Jerin Peter - Robotics Portfolio">
-  <meta property="og:description" content="Explore the portfolio of Jerin Peter, a Robotics Engineer with expertise in Control, Navigation, and ROS Development.">
+  <meta property="og:title" content="Darshan K T Gowda - Robotics Portfolio">
+  <meta property="og:description" content="Explore the portfolio of Darshan K T Gowda, a Robotics Engineer with expertise in Control, Navigation, and ROS Development.">
   <meta property="og:image" content="assets/images/preview/image.jpeg">
-  <meta property="og:url" content="https://jerinpeter.github.io/">
+  <meta property="og:url" content="https://darshan.github.io/">
   <meta property="og:type" content="website">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Jerin Peter - Robotics Portfolio">
-  <meta name="twitter:description" content="Explore the portfolio of Jerin Peter, a Robotics Engineer with expertise in Control, Navigation, and ROS Development.">
+  <meta name="twitter:title" content="Darshan K T Gowda - Robotics Portfolio">
+  <meta name="twitter:description" content="Explore the portfolio of Darshan K T Gowda, a Robotics Engineer with expertise in Control, Navigation, and ROS Development.">
   <meta name="twitter:image" content="assets/images/preview/image.jpeg">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -46,7 +46,7 @@
   <section id="home" class="home-section">
     <div class="background-slideshow"></div>
     <div class="container">
-      <h1 class="animated-text">Hi, I'm Jerin Peter</h1>
+      <h1 class="animated-text">Hi, I'm Darshan K T Gowda</h1>
       <p class="animated-text">Robotics Engineer | Control & Navigation Specialist | ROS Developer | Maker</p>
       <div class="social-links animated-text">
         <a href="https://github.com/jerinpeter" target="_blank"><i class="fab fa-github" style="font-size: 1.5em;"></i></a>
@@ -826,7 +826,7 @@
   <!-- Footer -->
   <footer>
     <div class="container">
-      <p>&copy; 2025 Jerin Peter. All rights reserved.</p>
+      <p>&copy; 2025 Darshan K T Gowda. All rights reserved.</p>
     </div>
   </footer>
   <script src="script.js"></script>
