--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
       <h1 class="animated-text">Hi, I'm Darshan K T Gowda</h1>
       <p class="animated-text">Robotics Engineer | Control & Navigation Specialist | ROS Developer | Maker</p>
       <div class="social-links animated-text">
-        <a href="https://github.com/jerinpeter" target="_blank"><i class="fab fa-github" style="font-size: 1.5em;"></i></a>
-        <a href="https://jerinpeter14.medium.com/" target="_blank"><i class="fab fa-medium-m" style="font-size: 1.5em;"></i></a>
-        <a href="mailto:jerinpeter@gmail.com"><i class="fas fa-envelope" style="font-size: 1.5em;"></i></a>
-        <a href="https://linkedin.com/in/jerinpeter" target="_blank"><i class="fab fa-linkedin" style="font-size: 1.5em;"></i></a>
-        <a href="https://www.youtube.com/@Jp_Robotics/videos" target="_blank"><i class="fab fa-youtube" style="font-size: 1.5em;"></i></a>
+        <a href="https://github.com/darshan-kt" target="_blank"><i class="fab fa-github" style="font-size: 1.5em;"></i></a>
+        <a href="https://medium.com/@darshankt" target="_blank"><i class="fab fa-medium-m" style="font-size: 1.5em;"></i></a>
+        <a href="mailto:darshankt1806@gmail.com"><i class="fas fa-envelope" style="font-size: 1.5em;"></i></a>
+        <a href="https://linkedin.com/in/darshan-k-t-70795012b" target="_blank"><i class="fab fa-linkedin" style="font-size: 1.5em;"></i></a>
+        <a href="https://www.youtube.com/@darshankt7266" target="_blank"><i class="fab fa-youtube" style="font-size: 1.5em;"></i></a>
       </div>
       <div class="resume-container animated-text">
         <a href="https://drive.google.com/file/d/1uh0uZJYCMabrNe1ZgiYcL_7Oc0FJtWtU/view?usp=sharing" 
