added name info

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <!-- Navigation Bar -->
   <nav>
     <div class="container">
-      <a href="#home" class="logo" style="font-size: 2em; text-decoration: none;">Jp Robotics</a>
+      <a href="#home" class="logo" style="font-size: 2em; text-decoration: none;">Darshan Robotics</a>
       <ul class="nav-links">
         <li><a href="#about">About</a></li>
         <li><a href="#skills">Skills</a></li>
