added skills section

--- a/index.html
+++ b/index.html
@@ -127,17 +127,17 @@
       <div class="skill-card">
         <i class="fas fa-code"></i>
         <h3>Programming</h3>
-        <p>C/C++, Python, Embedded C, MATLAB</p>
+        <p>C/C++, Python, Arduino, CUDA Programming</p>
       </div>
       <div class="skill-card">
         <i class="fas fa-brain"></i>
-        <h3>AI &amp; Machine Learning</h3>
-        <p>Deep Learning, Reinforcement Learning, Computer Vision, TensorFlow, PyTorch, OpenAI Gym</p>
+        <h3>Software Tools </h3>
+        <p>Docker, Github, VS code</p>
       </div>
       <div class="skill-card">
         <i class="fas fa-robot"></i>
         <h3>Robotics &amp; Perception</h3>
-        <p>ROS2, IsaacSim, MoveIt, SLAM (RTAB-Map, GMapping), OpenCV, PCL</p>
+        <p>ROS2, MoveIt, SLAM (RTAB-Map, GMapping), OpenCV, PCL</p>
       </div>
       <div class="skill-card">
         <i class="fas fa-compass"></i>
@@ -147,7 +147,7 @@
       <div class="skill-card">
         <i class="fas fa-microchip"></i>
         <h3>Embedded &amp; Systems</h3>
-        <p>RTOS, PlatformIO, STM32, ESP32, Raspberry Pi, Jetson Nano</p>
+        <p>Pixhawk, ESP32, Raspberry Pi, Jetson Nano</p>
       </div>
     </div>
   </div>
