--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <a href="https://www.youtube.com/@darshankt7266" target="_blank"><i class="fab fa-youtube" style="font-size: 1.5em;"></i></a>
       </div>
       <div class="resume-container animated-text">
-        <a href="https://drive.google.com/file/d/1uh0uZJYCMabrNe1ZgiYcL_7Oc0FJtWtU/view?usp=sharing" 
+        <a href="https://drive.google.com/file/d/1WRdpqTT6ZLNgfr2kncTrDenYBqkEO15D/view?usp=sharing" 
            target="_blank" class="resume-button">
           <i class="fas fa-download"></i> Resume
         </a>
@@ -86,38 +86,25 @@
       <div class="education-list">
         <div class="education-item">
           <div class="education-header">
-            <h3>University of California, Riverside</h3>
-            <img src="assets/images/education/ucr.png" alt="University of California, Riverside Logo">
+            <h3>The National Institute of Engineering, Mysuru, India</h3>
+            <img src="assets/images/education/NIE_University.png" alt="NIE_University Logo"> 
           </div>
-          <p>MS in Robotics with focus on control & navigation</p>
-          <p>CGPA: 3.88 / 4.0</p>
-          <p>Courses: Programming Practical Robots, Kinematics & Dynamics of Robots, Reinforcement Learning, Optimal
-            Control & Estimation, Computational Methods for Robotics, Fundamentals of Machine Learning, Foundations of
+          <p>MTECH/MS in Industrial Automation and Robotics</p>
+          <p>Courses: Programming Practical Robots, Kinematics & Dynamics of Robots, Mobile robotics, Optimal
+            Control & Estimation, Computational Methods for Robotics, Hydraulics and pneumatics, PLC, Drives & control system, Foundations of
             Robotics, Linear Control Systems</p>
         </div>
 
         <div class="education-item">
           <div class="education-header">
-            <h3>Rajagiri School of Engineering & Technology</h3>
-            <img src="assets/images/education/rset.jpeg" alt="Rajagiri School of Engineering & Technology Logo">
+            <h3>Ghousia College of Engineering, India</h3>
+            <img src="assets/images/education/GCE.png" alt="Ghousia college of Engineering Logo">
           </div>
-          <p>Undergraduate in Electronics & Communication Engineering</p>
-          <p>CGPA: 8.14 / 10.0</p>
-          <p>Courses: Robotics and Industrial Automation, Machine Learning, Real Time Operating Systems, Control
-            Systems, Digital Signal Processing</p>
+          <p>BE/BTECH in Mechanical Engineering</p>
+          <p>Courses: Mechatronics, Mechanical Design & Analysis, Michanical Vibration, Automotive electronics, Control
+            Systems, Machine Dynamics, Manufacturing </p>
         </div>
 
-        <div class="education-item">
-          <div class="education-header">
-            <h3>Cochin Refineries School</h3>
-            <img src="assets/images/education/crs.png" alt="Cochin Refineries School Logo">
-          </div>
-          <p>High School (12th Grade) with Major in Computer Science</p>
-          <p>CGPA: 8.60 / 10.0</p>
-          <p>Courses: Computer Science (C++, SQL), Mathematics, Physics, Chemistry</p>
-        </div>
-      </div>
-    </div>
   </section>
  <!-- Skills Section -->
  <section id="skills" class="skills-section">
@@ -132,21 +119,31 @@
       <div class="skill-card">
         <i class="fas fa-brain"></i>
         <h3>Software Tools </h3>
-        <p>Docker, Github, VS code</p>
+        <p>Docker, Github, VS code, Linux</p>
       </div>
       <div class="skill-card">
         <i class="fas fa-robot"></i>
-        <h3>Robotics &amp; Perception</h3>
-        <p>ROS2, MoveIt, SLAM (RTAB-Map, GMapping), OpenCV, PCL</p>
+        <h3>Robotics - Tools</h3>
+        <p>ROS/ROS2, MoveIt, Gazebo, RViz, OpenCV, PCL</p>
+      </div>
+      <div class="skill-card">
+        <i class="fas fa-robot"></i>
+        <h3>Robotics - Types</h3>
+        <p>AMR, Drones, Arm robots, ROVs</p>
       </div>
       <div class="skill-card">
         <i class="fas fa-compass"></i>
-        <h3>Control &amp; Navigation</h3>
-        <p>Path Planning, Kalman Filters, PID, MPC Control</p>
+        <h3>Robotics - Concepts</h3>
+        <p>Path Planning(Global & local planning), SLAM, Kalman Filters(EKF), PID</p>
+      </div>
+      <div class="skill-card">
+        <i class="fas fa-compass"></i>
+        <h3>Sensors</h3>
+        <p>2D/3D Lidars, RGB-D Camera(Zed, Kinect, Realsense), GPS(RTK)</p>
       </div>
       <div class="skill-card">
         <i class="fas fa-microchip"></i>
-        <h3>Embedded &amp; Systems</h3>
+        <h3>Embedded Systems</h3>
         <p>Pixhawk, ESP32, Raspberry Pi, Jetson Nano</p>
       </div>
     </div>
@@ -516,42 +513,42 @@
       <div class="timeline">
         <div class="timeline-item right">
           <div class="timeline-content">
-            <img src="assets/images/companies/ucr.png" alt="Asimov Robotics">
-            <h3>UC Riverside</h3>
-            <p>Teaching Assistant - EE Dept.</p>
-            <p>Oct 2024 - Dec 2024</p>
+            <img src="assets/images/companies/AAU.jpeg" alt="Aalborg University">
+            <h3>Aalborg University</h3>
+            <p>Research Assistant(Robotics)</p>
+            <p>Oct 2024 - Present</p>
           </div>
         </div>
         <div class="timeline-item left">
           <div class="timeline-content">
-            <img src="assets/images/companies/iptif.png" alt="ITP Palakkad Technology IHub Foundation">
-            <h3>IIT Palakkad Technology IHub Foundation</h3>
-            <p>Project Engineer - Mobile Robotics</p>
-            <p>Jul 2023 - Feb 2024</p>
+            <img src="assets/images/companies/reblade.jpg" alt="Reblade Aps">
+            <h3>Reblade Aps</h3>
+            <p>Robotics Software Engineer</p>
+            <p>Jun 2023 - Jul 2024</p>
           </div>
         </div>
         <div class="timeline-item right">
           <div class="timeline-content">
-            <img src="assets/images/companies/asimov.jpeg" alt="Asimov Robotics">
-            <h3>Asimov Robotics</h3>
-            <p>Software Intern - ROS Developer</p>
-            <p>Aug 2022 - Jun 2023</p>
+            <img src="assets/images/companies/infovision.jpg" alt="Infovision Solutions India Pvt Ltd">
+            <h3>Infovision Solutions India Pvt Ltd</h3>
+            <p>Senior Robotics Engineer</p>
+            <p>Jan 2021 - Mar 2023</p>
           </div>
         </div>
         <div class="timeline-item left">
           <div class="timeline-content">
-            <img src="assets/images/companies/tihan.png" alt="THIAN">
-            <h3>TiHAN</h3>
-            <p>Research Assistant &amp; Community Development</p>
-            <p>Aug 2021 - Oct 2021</p>
+            <img src="assets/images/companies/fluxauto.jpg" alt="FluxAuto">
+            <h3>FluxAuto</h3>
+            <p>Robotics Engineer </p>
+            <p>Jul 2019 - Dec 2020</p>
           </div>
         </div>
         <div class="timeline-item right">
           <div class="timeline-content">
-            <img src="assets/images/companies/aug.png" alt="Augsense Labs">
-            <h3>Augsense Labs</h3>
-            <p>Software Intern - ROS Developer</p>
-            <p>Feb 2020 - Sept 2020</p>
+            <img src="assets/images/companies/wipro.jpg" alt="Wipro Technilogies">
+            <h3>Wipro Technilogies</h3>
+            <p>Robotics Intern - ROS Developer</p>
+            <p>Aug 2018 - Jun 2019</p>
           </div>
         </div>
       </div>
@@ -808,15 +805,15 @@
       <h2>Contact Me</h2>
       <p style="text-align: center;">Feel free to reach out for collaborations or opportunities!</p>
       <div class="contact-info">
-        <p>Email: <a href="mailto:jerinpeter@gmail.com">jerinpeter@gmail.com</a></p>
-        <p>Phone: +1 (951) 275-7664</p>
+        <p>Email: <a href="mailto:darshankt1806@gmail.com">darshankt1806@gmail.com</a></p>
+        <p>Phone: +45 91192995</p>
         <!-- Social media icons -->
         <div class="social-links animated-text">
-          <a href="https://linkedin.com/in/jerinpeter" target="_blank"><i class="fab fa-linkedin"></i></a>
-          <a href="https://github.com/jerinpeter" target="_blank"><i class="fab fa-github"></i></a>
-          <a href="https://jerinpeter14.medium.com/" target="_blank"><i class="fab fa-medium-m"></i></a>
-          <a href="mailto:jerinpeter@gmail.com"><i class="fas fa-envelope"></i></a>
-          <a href="https://www.instagram.com/jerin_peter/" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://github.com/darshan-kt" target="_blank"><i class="fab fa-github" style="font-size: 1.5em;"></i></a>
+        <a href="https://medium.com/@darshankt" target="_blank"><i class="fab fa-medium-m" style="font-size: 1.5em;"></i></a>
+        <a href="mailto:darshankt1806@gmail.com"><i class="fas fa-envelope" style="font-size: 1.5em;"></i></a>
+        <a href="https://linkedin.com/in/darshan-k-t-70795012b" target="_blank"><i class="fab fa-linkedin" style="font-size: 1.5em;"></i></a>
+        <a href="https://www.youtube.com/@darshankt7266" target="_blank"><i class="fab fa-youtube" style="font-size: 1.5em;"></i></a>
         </div>
       </div>
     </div>
