--- a/index.html
+++ b/index.html
@@ -230,25 +230,25 @@
           </ul>
         </div>
         <!-- Project 4 -->
-        <a href="4wd_outdoor_nav.html" style="text-decoration: none; color: inherit;">
-          <div class="project-card">
-            <img src="assets/images/projects/4wd.jpg" alt="4WD Outdoor Navigation Robot">
-            <h3>4WD Outdoor Navigation Robot</h3>
-            <p>Developed a 4-wheel drive robot with a 3D camera for real-time appearance-based mapping and navigation in
-              GPS-denied environments.</p>
- 
-            <ul class="project-skills">
-              <li>3D Vision</li>
-              <li>Appearance-based Mapping</li>
-              <li>Real-Time Navigation</li>
-              <li>GPS-Denied Environments</li>
-              <li>Visual inertial odometry</li>
-            </ul>
-          </div>
-        </a>
+      <a href="pole_detection.html" style="text-decoration: none; color: inherit;">
+        <div class="project-card">
+          <img src="assets/images/projects/pole_detection/pole_detection_algo-1.gif" alt="Pole Detection & Midpoint Calculation">
+          <h3>Pole Detection & Midpoint Calculation</h3>
+          <p>Designed a LiDAR-based navigation system for a robot operating beneath solar panels. Used point cloud filtering to detect poles and calculate midpoints for autonomous mowing.</p>
+
+          <ul class="project-skills">
+            <li>LiDAR</li>
+            <li>Point Cloud Filtering</li>
+            <li>ROS 2</li>
+            <li>Midpoint Path Planning</li>
+            <li>Simulation in Gazebo</li>
+          </ul>
+        </div>
+      </a>
+
 
         <!-- Project 5 -->
-        <a href="dqn.html" style="text-decoration: none; color: inherit;">
+        <!-- <a href="dqn.html" style="text-decoration: none; color: inherit;">
           <div class="project-card">
             <img src="assets/images/projects/rl.png" alt="Autonomous Navigation of a Mecanum Robot Using DQN in ROS 2">
             <h3>Autonomous Navigation of a Mecanum Robot Using DQN in ROS 2</h3>
@@ -263,10 +263,10 @@
               <li>Simulation</li>
             </ul>
           </div>
-        </a>
+        </a> -->
 
         <!-- Project 6 -->
-        <a href="low_cost_autonomous_robot.html" style="text-decoration: none; color: inherit;">
+        <!-- <a href="low_cost_autonomous_robot.html" style="text-decoration: none; color: inherit;">
           <div class="project-card">
             <img src="assets/images/projects/mini.png" alt="Mini Indoor Autonomous Nav Bot">
             <h3>Mini Indoor Autonomous Nav Bot</h3>
@@ -280,10 +280,10 @@
               <li>Fusion 360</li>
             </ul>
           </div>
-        </a>
+        </a> -->
 
         <!-- Project 7 -->
-        <a href="mecanum.html" style="text-decoration: none; color: inherit;">
+        <!-- <a href="mecanum.html" style="text-decoration: none; color: inherit;">
           <div class="project-card">
             <img src="assets/images/projects/mecanum.png" alt="Holonomic Autonomous Navigation Mobile Robot">
             <h3>Mecanum Wheel Based Nav. Robot</h3>
@@ -297,10 +297,10 @@
               <li>Drift Control</li>
             </ul>
           </div>
-        </a>
+        </a> -->
 
         <!-- Project 8 -->
-        <a href="turtle_game.html" style="text-decoration: none; color: inherit;">
+        <!-- <a href="turtle_game.html" style="text-decoration: none; color: inherit;">
           <div class="project-card">
             <img src="assets/images/projects/demo.gif" alt="Turtlesim based Game in ROS">
             <h3>Turtlesim based Game in ROS</h3>
@@ -313,10 +313,10 @@
               <li>C++</li>
             </ul>
           </div>
-        </a>
+        </a> -->
 
         <!-- Project 9 -->
-        <a href="outdoorbot.html" style="text-decoration: none; color: inherit;">
+        <!-- <a href="outdoorbot.html" style="text-decoration: none; color: inherit;">
           <div class="project-card">
             <img src="assets/images/projects/outdoor.png" alt="RTK GPS Based Outdoor Nav. Bot">
             <h3>RTK GPS Based Outdoor Nav. Bot</h3>
@@ -330,10 +330,10 @@
               <li>State estimation</li>
             </ul>
           </div>
-        </a>
+        </a> -->
 
         <!-- Project 10 -->
-        <a href="all_terrain_medical_rover.html" style="text-decoration: none; color: inherit;">
+        <!-- <a href="all_terrain_medical_rover.html" style="text-decoration: none; color: inherit;">
           <div class="project-card">
             <img src="assets/images/projects/psr.png" alt="All-Terrain Medical Security Phase Shifting Rover">
             <h3>All-Terrain Medical Security Phase Shifting Rover</h3>
@@ -347,7 +347,7 @@
               <li>All-Terrain Robotics</li>
             </ul>
           </div>
-        </a>
+        </a> -->
 
         <!-- Project 11 -->
         <a href="https://github.com/jerinpeter/chat_app" target="_blank" style="text-decoration: none; color: inherit;">
@@ -367,7 +367,7 @@
         </a>
 
         <!-- Project 12 -->
-        <a href="selfdriving.html" style="text-decoration: none; color: inherit;">
+        <!-- <a href="selfdriving.html" style="text-decoration: none; color: inherit;">
           <div class="project-card">
             <img src="assets/images/projects/lanefollowing.png" alt="Lane Following Robot">
             <h3>Lane Following Robot</h3>
@@ -380,10 +380,10 @@
               <li>Basic Robotics</li>
             </ul>
           </div>
-        </a>
+        </a> -->
 
         <!-- Project 13 -->
-        <a href="https://photos.app.goo.gl/h2pmLLuwtx7CN4xdA" target="_blank" style="text-decoration: none; color: inherit;">
+        <!-- <a href="https://photos.app.goo.gl/h2pmLLuwtx7CN4xdA" target="_blank" style="text-decoration: none; color: inherit;">
           <div class="project-card">
             <img src="assets/images/projects/spidy.png" alt="4 Legged Spider Robot">
             <h3>4 Legged Spider Robot</h3>
@@ -396,7 +396,7 @@
               <li>Motion Control</li>
             </ul>
           </div>
-        </a>
+        </a> -->
 
         <!-- Project 14 -->
         <a href="https://youtube.com/shorts/h-e4w2_vm8c" target="_blank" style="text-decoration: none; color: inherit;">
@@ -415,7 +415,7 @@
         </a>
 
         <!-- Project 15 -->
-        <div class="project-card">
+        <!-- <div class="project-card">
           <img src="assets/images/projects/waterbot.png" alt="Water Body Cleaning Robot">
           <h3>Water Body Cleaning Robot</h3>
           <p>A prototype of an autonomous water cleaning robot with GPS-based mission planning to cover a water body and
@@ -427,10 +427,10 @@
             <li>Waste Collection</li>
             <li>Autonomous Navigation</li>
           </ul>
-        </div>
+        </div> -->
 
         <!-- Project 16 -->
-        <div class="project-card">
+        <!-- <div class="project-card">
           <img src="assets/images/projects/drone.jpg" alt="Racing Drone with CC3D">
           <h3>Racing Drone with CC3D</h3>
           <p>PID-tuned racing drone capable of performing stunt maneuvers.</p>
@@ -441,10 +441,10 @@
             <li>Aerodynamics</li>
             <li>Aerial Robotics</li>
           </ul>
-        </div>
+        </div> -->
 
         <!-- Project 17 -->
-        <div class="project-card">
+        <!-- <div class="project-card">
           <img src="assets/images/projects/arm.png" alt="Fully 3D printed Robot Arm">
           <h3>Fully 3D printed Robot Arm</h3>
           <p>Innovative 3D-printed robotic arm with advanced control features.</p>
@@ -455,10 +455,10 @@
             <li>CAD</li>
             <li>Prototyping</li>
           </ul>
-        </div>
+        </div> -->
 
         <!-- Project 18 -->
-        <div class="project-card">
+        <!-- <div class="project-card">
           <img src="assets/images/projects/biped.jpg" alt="Fully 3D printed biped robot with voice control">
           <h3>Fully 3D printed biped robot with voice control</h3>
           <p>Walking biped robot with obstacle avoidance and voice control.</p>
@@ -469,10 +469,10 @@
             <li>Obstacle Avoidance</li>
             <li>Gait Planning</li>
           </ul>
-        </div>
+        </div> -->
 
         <!-- Project 19 -->
-        <div class="project-card">
+        <!-- <div class="project-card">
         <a href="https://www.youtube.com/watch?v=DF6BLnM9p1M" target="_blank" style="text-decoration: none; color: inherit;">
 
           <img src="assets/images/projects/iot.jpg" alt="Home Automation using IOT">
@@ -486,10 +486,10 @@
             <li>Embedded Systems</li>
           </ul>
           </a>
-        </div>
+        </div> -->
 
         <!-- Project 20 -->
-        <div class="project-card">
+        <!-- <div class="project-card">
           <img src="assets/images/projects/dirtcar.png" alt="RC offroad car with drift control">
           <h3>RC offroad car with drift control</h3>
           <p>RC dirt car featuring flip detection and control switching for stable off-road driving.</p>
@@ -502,8 +502,7 @@
           </ul>
         </div>
       </div>
-      <!-- <button class="more-button" id="toggleProjects">More Projects</button> -->
-    </div>
+    </div> -->
   </section>
 
   <!-- Experience Section -->
