added sitl arducopter project

--- a/index.html
+++ b/index.html
@@ -214,21 +214,21 @@
         </a>
 
         <!-- Project 3 -->
+      <a href="sitl_gazebo_project_final.html" style="text-decoration: none; color: inherit;">
         <div class="project-card">
-          <img src="assets/images/projects/multimodal.png" alt="Multimodal Calibration Dataset">
-          <h3>Multimodal Calibration Dataset</h3>
-          <p>A versatile multimodal calibration platform that uses robotic arms and a high-precision MoCap system to
-            collect diverse extrinsic data between cameras and LiDAR sensors across both static and dynamic
-            configurations.</p>
-          <ul class="project-skills">
-            <li>ROS</li>
-            <li>Camera-LiDAR Calibration</li>
-            <li>Manipulation</li>
-            <li>MoCap</li>
-            <li>Extrinsic Calibration</li>
-            <li>Data Collection</li>
-          </ul>
-        </div>
+      <img src="assets/images/projects/sitl_gazebo/sitl_gazebo_gif.gif" alt="SITL + Gazebo Simulation">
+      <h3>SITL + Gazebo UAV Simulation</h3>
+      <p>A two-part simulation framework using ArduPilot SITL and Gazebo to develop and test autonomous navigation and flight control of quadrotors without real hardware. Supports mission planning, flight modes, and 3D visualization.</p>
+      <ul class="project-skills">
+        <li>ArduPilot SITL</li>
+        <li>MAVProxy</li>
+        <li>Gazebo</li>
+        <li>Flight Simulation</li>
+        <li>Mission Planning</li>
+        <li>Autonomous UAV Control</li>
+      </ul>
+    </div>
+
         <!-- Project 4 -->
       <a href="pole_detection.html" style="text-decoration: none; color: inherit;">
         <div class="project-card">
