added navigation bar at sitl project

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <div class="skill-card">
         <i class="fas fa-brain"></i>
         <h3>Software Tools </h3>
-        <p>Docker, Github, VS code, Linux</p>
+        <p>Docker, Dev Containers, Github, VS code, Linux</p>
       </div>
       <div class="skill-card">
         <i class="fas fa-robot"></i>
