--- a/sitl_gazebo_project_final.html
+++ b/sitl_gazebo_project_final.html
@@ -63,6 +63,19 @@
 </head>
 <body>
 
+<!-- Navigation Bar -->
+  <nav>
+    <div class="container">
+      <a href="index.html" class="logo">Darshan K T</a>
+      <ul class="nav-links">
+        <li><a href="index.html#projects">Projects</a></li>
+        <li><a href="index.html#experience">Experience</a></li>
+        <li><a href="index.html#publications">Publications</a></li>
+        <li><a href="index.html#contact">Contact</a></li>
+      </ul>
+    </div>
+  </nav>
+
 <div class="container">
   <h2>SITL-Based Simulation and Gazebo Visualization with ArduPilot Integration</h2>
 
