GPU virtualisation project added

--- a/index.html
+++ b/index.html
@@ -247,6 +247,26 @@
       </a>
 
 
+    <!-- Project: GVirtuS + OpenPose Virtualization -->
+    <a href="GPU Virtualisation - Openpose application.html" style="text-decoration: none; color: inherit;">
+      <div class="project-card">
+        <img src="assets/images/projects/gvirtus_openpose/integration.gif" alt="GVirtuS + OpenPose Virtualization"> 
+        <h3>GPU Virtualization for OpenPose</h3>
+        <p>
+          Demonstrated how GVirtuS virtualizes GPU resources to run the GPU-hungry OpenPose application 
+          on lightweight non-GPU edge devices by redirecting CUDA calls to a remote GPU backend.
+        </p>
+        <ul class="project-skills">
+          <li>GPU Virtualization</li>
+          <li>GVirtuS Framework</li>
+          <li>OpenPose</li>
+          <li>Caffe</li>
+          <li>CUDA</li>
+        </ul>
+      </div>
+    </a>
+
+
         <!-- Project 5 -->
         <!-- <a href="dqn.html" style="text-decoration: none; color: inherit;">
           <div class="project-card">
