--- a/GPU Virtualisation - Openpose application.html
+++ b/GPU Virtualisation - Openpose application.html
@@ -83,7 +83,7 @@
   <!-- Navigation -->
   <nav>
     <div class="container">
-      <a href="index.html" class="logo">Jerin Peter</a>
+      <a href="index.html" class="logo">Darshan K T</a>
       <ul class="nav-links">
         <li><a href="index.html#projects">Projects</a></li>
         <li><a href="index.html#experience">Experience</a></li>
