Added blueROV robot project

--- a/index.html
+++ b/index.html
@@ -174,25 +174,24 @@
         
         <!-- Project 1 -->
 
-        <a href="autonomous_indoor_delivery_robot.html" style="text-decoration: none; color: inherit;">
+        <a href="blueROV_underwater_robot.html" style="text-decoration: none; color: inherit;">
           <div class="project-card">
-            <img src="assets/images/projects/nova.jpg" alt="Autonomous Indoor Delivery Robot">
-            <h3>Autonomous Indoor Delivery Robot</h3>
-            <p>Developed an autonomous indoor delivery robot using ROS for precise path planning. Integrated sensor
-              fusion (Lidar, Wheel odom, IMU) with EKF for high accuracy localization. Designed a PyQT-based GUI for
-              easy user interaction and voice control.</p>
+            <img src="assets/images/projects/bluerov/bluerov.gif" alt="BlueROV2 Underwater Robot Setup">  
+            <h3>BlueROV2 Underwater Robot Setup</h3>
+            <p>Configured and deployed the BlueROV2 robot for underwater operation using QGroundControl and Xbox controller. Achieved live video streaming and control, and laid the groundwork for ROS2 integration with future YOLO-based perception tasks.</p>
             <ul class="project-skills">
-              <li>ROS</li>
-              <li>Path Planning</li>
-              <li>Sensor Fusion</li>
-              <li>Extended Kalman Filter</li>
-              <li>PyQT GUI</li>
-              <li>Voice Control</li>
-              <li>Interactive</li>
-              <li>Solid Works</li>
+              <li>BlueROV2</li>
+              <li>QGroundControl</li>
+              <li>Xbox Controller</li>
+              <li>ArduSub</li>
+              <li>Pixhawk</li>
+              <li>Raspberry Pi</li>
+              <li>ROS2 (Future)</li>
+              <li>YOLO Detection (Future)</li>
             </ul>
           </div>
         </a>
+
 
         <!-- Project 2 -->
         <a href="plate_cleaning_arm.html" style="text-decoration: none; color: inherit;">
