sitl html changes

--- a/sitl_gazebo_project_final.html
+++ b/sitl_gazebo_project_final.html
@@ -83,7 +83,7 @@
     <a href="https://youtu.be/dUtoUXEG6Ng?si=C6vaK2D4CbawDgx9" target="_blank">
       <img src="assets/images/projects/sitl_gazebo/sitl_gazebo_gif.gif" alt="Demo Video" style="max-width: 100%; border-radius: 8px;">
     </a>
-    <p style="margin-top: 0.5rem;">Click above to view the demo video</p>
+    <p style="margin-top: 0.5rem;">Click On the Video to View full Video on YouTube</p>
   </div>
 
   <div class="section">
