--- a/index.html
+++ b/index.html
@@ -575,13 +575,13 @@
 
   
   <!-- Publications Section -->
-  <section id="publications" class="publications-section">
+  <!-- <section id="publications" class="publications-section">
     <div class="container">
       <h2>Publications</h2>
-      <div class="publications-grid">
+      <div class="publications-grid"> -->
         
         <!-- Publication 1 -->
-        <div class="publication-card">
+        <!-- <div class="publication-card">
           <div class="publication-info">
             <h3>Development of a Low-Cost Multipurpose Autonomous Navigation Robot</h3>
             <p class="publication-authors">J. Peter and M. J. Thomas</p>
@@ -590,9 +590,9 @@
             </p>
             <a href="https://ieeexplore.ieee.org/abstract/document/9848857" target="_blank" class="publication-link">
               View Paper
-            </a>
+            </a> -->
             <!-- Embedded YouTube Video -->
-            <div class="publication-video">
+            <!-- <div class="publication-video">
               <iframe width="100%" height="200" src="https://www.youtube.com/embed/sJpIB1qDBU4" 
                 title="Development of a Low-Cost Multipurpose Autonomous Navigation Robot" 
                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
@@ -600,23 +600,23 @@
               </iframe>
             </div>
           </div>
-        </div>
+        </div> -->
   
         <!-- Publication 2 -->
-        <div class="publication-card">
+        <!-- <div class="publication-card">
           <div class="publication-info">
             <h3>Development of an Autonomous Ground Robot Using a Real-Time Appearance Based (RTAB) Algorithm</h3>
             <p class="publication-authors">J. Peter, M. J. Thomas, Mohan S. </p>
             <p>
-              In Proceedings of the 2023 6th International Conference on Advances in Robotics - ACM <br/>
+              In Proceedings of the 2023 6th International Conference on Advances in Robotics - ACM <br/> -->
               <!-- <em>https://doi.org/10.1145/3610419.3610472</em> -->
-            </p>
+            <!-- </p>
             <a href="https://dl.acm.org/doi/abs/10.1145/3610419.3610472" target="_blank" class="publication-link">
               View Paper
-            </a>
+            </a> -->
             <!-- Embedded YouTube Video -->
-            <div class="publication-video">
-              <iframe width="100%" height="200" src="https://www.youtube.com/embed/oyijr-v_Ncw" 
+            <!-- <div class="publication-video"> -->
+              <!-- <iframe width="100%" height="200" src="https://www.youtube.com/embed/oyijr-v_Ncw" 
                 title="Development of an Autonomous Ground Robot Using a Real-Time Appearance Based (RTAB) Algorithm" 
                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                 allowfullscreen>
@@ -624,21 +624,21 @@
             </div>
           </div>
         </div>
-  
+   -->
         <!-- Publication 3 -->
-        <div class="publication-card">
+        <!-- <div class="publication-card">
           <div class="publication-info">
             <h3>Development of an Intuitive Autonomous Ground Robot for Indoor Delivery Applications</h3>
             <p class="publication-authors">Peter J., Thomas M.J., Gokulkrishna S., Cholappally K., Mohan S.</p>
             <p>
-              Recent Advancements in Product Design and Manufacturing Systems. IPDIMS 2023 - Springer Nature <br/>
+              Recent Advancements in Product Design and Manufacturing Systems. IPDIMS 2023 - Springer Nature <br/> -->
               <!-- <em>https://doi.org/10.1007/978-981-97-6732-8_3</em> -->
-            </p>
+            <!-- </p>
             <a href="https://link.springer.com/chapter/10.1007/978-981-97-6732-8_3" target="_blank" class="publication-link">
               View Paper
-            </a>
+            </a> -->
             <!-- Embedded YouTube Video -->
-            <div class="publication-video">
+            <!-- <div class="publication-video">
               <iframe width="100%" height="200" src="https://www.youtube.com/embed/UdTig0XozBs" 
                 title="Development of an Intuitive Autonomous Ground Robot for Indoor Delivery Applications" 
                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
@@ -650,7 +650,7 @@
   
       </div>
     </div>
-  </section>
+  </section> -->
   
   <!-- Workshops & Mentorships Slideshow Section -->
 <section id="workshops" class="workshops-section">
